updated readme(now in xcmailr-resources) and modified application.conf